<resources>
    <string name="app_name">TioPixel WebAppWp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="lema">Una web app basada en wp</string>
    <string name="Ajustes_primarios">Ajustes Primarios</string>
    <string name="ajuste_titulo">Mostrar Titulo</string>
    <string name="ajuste_fecha">Mostrar fecha en post</string>
    <string name="ajuste_cache">Limpiar Cache</string>
    <string name="ajuste_tema">Cambiar Tema</string>
    <string name="Ajustes_avanzados">Ajustes avanzados</string>
    <string name="ajuste_tema_color">Cambiar el color del tema</string>
    <string name="action_about">Acerca de…</string>
    <string name="about_app">EltiopixelWp</string>
    <string name="about_descripcion">Esta app fue realizada para servir de template, agradecimientos a redhawk y el tio pixel</string>
    <string name="app_version">Version 1.0</string>
    <string name="color_rojo">Rojo</string>
    <string name="color_azul">Azul</string>
    <string name="color_verde">Verde</string>
    <string name="color_naranja">Naranja</string>
    <string name="color_rosa">Rosa</string>
    <string name="color_morado">Morado</string>
    <string name="color_cafe">Cafe</string>
    <string name="color_gris">Gris</string>
    <string name="color_azulOscuro">Azul Oscuro</string>
    <string name="color_azulclaro">Azul Claro</string>
    <string name="tema_quitar">Quitar</string>
    <string name="tema_cambiar">Cambiar</string>
    <string name="busqueda">Buscar</string>
    <string name="Ajustes_orden">Ordenar por..</string>
    <string name="ajustes_vista">Cambiar vista..</string>
    <string name="nav_home">Home</string>
    <string name="nav_fixes">Fixes</string>
    <string name="nav_dispositivos">Dispositivos</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_soporte">Soporte</string>
    <string name="nav_comunicacion">Comunicacion</string>
    <string name="aspecto_default">Default</string>
    <string name="Aspecto_grilla_revista_de_tarjetas">Grilla Revista de Tarjetas</string>
    <string name="aspecto_grilla_de_tarjetas">Grilla de Tarjetas</string>
    <string name="aspecto_grilla_default">Grilla default</string>
    <string name="aspecto_lista_de_tarjetas">Lista de Tarjetas</string>
    <string name="aspect_revista_de_tarjetas">Revista de Tarjetas</string>
    <string name="aspecto_titulo">Seleccione visualizacion de Post</string>
</resources>
