<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_folder_special_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_fixes"
            android:icon="@drawable/ic_memory_black_24dp"
            android:title="@string/nav_fixes"/>
        <item
            android:id="@+id/nav_dispositivos"
            android:icon="@drawable/ic_hardware_phone_android"
            android:title="@string/nav_dispositivos" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/nav_comunicacion" android:textColor="?attr/colorAccent">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/nav_chat" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_soporte" />
        </menu>
    </item>

</menu>
