<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textViewAboutDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/action_about"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/md_text"
        android:layout_gravity="center_horizontal" />

    <FrameLayout
        android:background="@color/md_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="0.20"
        android:adjustViewBounds="false"
        android:contentDescription="@string/about_app" />

    <TextView
        android:id="@+id/textViewAboutDialogDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/about_descripcion"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/md_secondary_text_icons"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/app_version"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?attr/colorAccent"
        android:textColorLink="?attr/colorAccent"
        android:layout_gravity="center_vertical"
        tools:ignore="RtlHardcoded" />

</LinearLayout>