<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textViewOrdenDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/aspecto_titulo"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/md_text" />

    <FrameLayout
        android:background="@color/md_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical">

        <FrameLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <!-- The main content view -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp">

                    <CheckedTextView
                        android:id="@+id/itemButton1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:checkMark="?android:attr/listChoiceIndicatorSingle"
                        android:checked="false"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/aspecto_default"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />

                    <FrameLayout
                        android:id="@+id/frameLayoutitemButton1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp">
                    <CheckedTextView
                        android:id="@+id/itemButton2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:checkMark="?android:attr/listChoiceIndicatorSingle"
                        android:checked="false"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/aspecto_lista_de_tarjetas"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />
                    <FrameLayout
                        android:id="@+id/frameLayoutitemButton2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <CheckedTextView
                        android:id="@+id/itemButton3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:checkMark="?android:attr/listChoiceIndicatorSingle"
                        android:checked="false"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/aspect_revista_de_tarjetas"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />
                    <FrameLayout
                        android:id="@+id/frameLayoutitemButton3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" />

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <CheckedTextView
                        android:id="@+id/itemButton4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:checkMark="?android:attr/listChoiceIndicatorSingle"
                        android:checked="false"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/aspecto_grilla_default"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />
                    <FrameLayout
                        android:id="@+id/frameLayoutitemButton4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" />

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relativeLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <CheckedTextView
                        android:id="@+id/itemButton5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:checkMark="?android:attr/listChoiceIndicatorSingle"
                        android:checked="false"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/aspecto_grilla_de_tarjetas"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />
                    <FrameLayout
                        android:id="@+id/frameLayoutitemButton5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" />

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relativeLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <CheckedTextView
                        android:id="@+id/itemButton6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:checkMark="?android:attr/listChoiceIndicatorSingle"
                        android:checked="false"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/Aspecto_grilla_revista_de_tarjetas"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />
                    <FrameLayout
                        android:id="@+id/frameLayoutitemButton6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" />

                </RelativeLayout>


                <FrameLayout
                    android:background="@color/md_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>