<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <FrameLayout
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusBarHeight"
        android:background="?colorPrimary"
        android:translationZ="4dp" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:elevation="@dimen/toolbarElevation"
            android:layout_marginTop="@dimen/appBarTopMargin"
            tools:targetApi="lollipop" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <!-- The main content view -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/Ajustes_primarios"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                    android:textColor="?attr/colorAccent"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp">


                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchWidget"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="16dp"
                        android:text="@string/ajuste_titulo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />

                    <FrameLayout
                        android:id="@+id/frameLayoutSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchFecha"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="16dp"
                        android:text="@string/ajuste_fecha"
                        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                        android:textColor="@color/md_text"
                        android:textSize="16sp" />

                    <FrameLayout
                        android:id="@+id/frameLayoutSwitchMFecha"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="8dp"
                        android:background="@color/md_divider" />

                    <FrameLayout
                        android:id="@+id/frameLayoutCache"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ajuste_cache"
                            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                            android:textColor="@color/md_text"
                            android:textSize="16sp"
                            android:layout_gravity="left|center_vertical"
                            android:layout_marginLeft="16dp"
                            tools:ignore="RtlHardcoded" />
                    </FrameLayout>


                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewAdvancedSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/Ajustes_avanzados"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                    android:textColor="?attr/colorAccent"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:id="@+id/relativeLayoutChooseTheme"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/imageViewPhone3"
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:padding="-6dp"
                        android:src="@drawable/ic_hardware_phone_android_3"
                        android:tint="?attr/colorAccent"
                        android:contentDescription="@string/ajuste_tema"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/imageViewPhone2"
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:padding="-6dp"
                        android:src="@drawable/ic_hardware_phone_android_2"
                        android:tint="?attr/colorPrimary"
                        android:contentDescription="@string/ajuste_tema"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/imageViewPhone"
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:padding="-6dp"
                        android:src="@drawable/ic_hardware_phone_android"
                        android:tint="?attr/colorAccent"
                        android:contentDescription="@string/ajuste_tema"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="64dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        tools:ignore="RtlHardcoded">

                        <TextView
                            android:id="@+id/textViewTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/ajuste_tema"
                            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                            android:textColor="@color/md_text"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textViewThemeDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/ajuste_tema_color"
                            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                            android:textColor="@color/md_secondary_text_icons"
                            android:textSize="14sp" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>